data/derived/fa15/progs/unify/prog1191.ml.out
Characters 276-280:
  List.fold_left f base args in res 
                   ^^^^
Error: This expression has type int * 'a list
       but an expression was expected of type int * int
       Type 'a list is not compatible with type int 
